--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,26 @@
 # Site
 title: esmyy
-subtitle: ''
-description: ''
-keywords:
+subtitle: ""
+description: ""
+keywords: "esmyy, myy, 马月月, 月月, 月月的个人网站"
 author: Esmyy
-language: en
-timezone: ''
+language: zh-CN
+timezone: ""
 
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://mayueyue.com
+url: https://mayueyue.com
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: true # Set to false to remove trailing '.html' from permalinks
+
+# First Screen
+firstScreen:
+  image: "https://cdn.pixabay.com/photo/2022/10/28/18/12/lake-7553642_960_720.jpg"
+  date: "2022年11月4日"
+  addr: "北京朝阳区"
+  description: "爱我所爱，长久不懈"
 
 # Directory
 source_dir: source
@@ -32,7 +39,7 @@ titlecase: false # Transform title into titlecase
 external_link:
   enable: true # Open external links in new tab
   field: site # Apply to the whole site
-  exclude: ''
+  exclude: ""
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -42,24 +49,24 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace: ''
+  tab_replace: ""
   wrap: true
   hljs: false
 prismjs:
   enable: false
   preprocess: true
   line_number: true
-  tab_replace: ''
+  tab_replace: ""
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ''
+  path: ""
   per_page: 10
   order_by: -date
-  pagination_dir: 'page'
+  pagination_dir: "page"
 
 # Category & Tag
 default_category: uncategorized
@@ -77,7 +84,7 @@ meta_generator: true
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 ## updated_option supports 'mtime', 'date', 'empty'
-updated_option: 'mtime'
+updated_option: "mtime"
 
 # Pagination
 ## Set per_page to 0 to disable pagination
@@ -98,4 +105,4 @@ theme: esmyy
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: ""
