--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "hexo-calendar": "^1.0.5",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^2.0.0",
+    "hexo-generator-indexed": "^1.2.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-pagination": "^3.0.0",
     "hexo-renderer-ejs": "^2.0.0",
