--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-generator-indexed": "^1.2.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-pagination": "^3.0.0",
+    "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
