--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "autoprefixer": "^9.8.8",
     "hexo": "^6.3.0",
     "hexo-calendar": "^1.0.5",
+    "hexo-external-link": "^1.0.9",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-indexed": "^1.2.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-pagination": "^3.0.0",
@@ -26,6 +28,7 @@
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
+    "hexo-wordcount": "^6.0.1",
     "prettier": "^2.7.1"
   },
   "devDependencies": {}
