feat: 获取分类最后一个文章

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server",
     "dev": "hexo server",
     "po": "hexo new post",
-    "ph": "hexo new picture",
+    "ph": "hexo new photo",
     "r": "hexo new reading"
   },
   "hexo": {
