--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site
 title: esmyy
 favicon: /images/favicon.png
+avatar: /images/2102.jpg
 subtitle: ""
 description: ""
 keywords: "esmyy, myy, 马月月, 月月, 月月的个人网站"
@@ -84,8 +85,6 @@ highlight:
 prism_plugin:
   mode: "preprocess" # realtime/preprocess
   theme: "default"
-  line_number: true # default false
-  custom_css:
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -129,22 +128,6 @@ include:
 exclude:
 ignore:
 
-# 压缩
-neat_enable: true
-neat_html:
-  enable: true
-  exclude:
-neat_css:
-  enable: true
-  exclude:
-    - "*.min.css"
-neat_js:
-  enable: true
-  mangle: true
-  output:
-  compress:
-  exclude:
-    - "*.min.js"
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
@@ -212,3 +195,7 @@ jsdelivr:
   gh_user: esmyy
   gh_repo: imagehost
   baseUrl: cdn.jsdelivr.net
+
+minify:
+  html:
+    enable: false
