--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "hexo generate",
+    "build": "NODE_ENV=production hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
@@ -25,6 +25,7 @@
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-indexed": "^1.2.1",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-minify": "^1.2.3",
     "hexo-pagination": "^3.0.0",
     "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^2.0.0",
