--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "NODE_ENV=production hexo generate && sh ./scripts/imghost.sh",
+    "build": "NODE_ENV=production hexo generate && npm run publish",
+    "publish": "sh ./scripts/imghost.sh",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
