--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,6 +4,8 @@ on:
   push:
     paths:
       - "source/**"
+      - ".github/workflows/pages.yml"
+      - "_config.yml"
     branches:
       - main # default branch
 
@@ -17,7 +19,7 @@ jobs:
         with:
           node-version: "16.9.0"
       - name: Cache NPM dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: node_modules
           key: ${{ runner.OS }}-npm-cache
