--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,31 @@
 {
-  "cSpell.words": ["esmyy", "leancloud", "shuoshuo"]
+  "cSpell.words": [
+    "esmyy",
+    "leancloud",
+    "shuoshuo",
+    "fullwidth",
+    "GSLB",
+    "HTTPDNS",
+    "iife",
+    "instanceof",
+    "Microtask",
+    "mindmap",
+    "mypage",
+    "npmrc",
+    "Nuxt",
+    "QUIC",
+    "SYNACK",
+    "tailwindcss",
+    "Tapable",
+    "tencent",
+    "thisbox",
+    "traceroute",
+    "typeof",
+    "vdom",
+    "Vuex",
+    "zcfv",
+    "zcvf",
+    "zxfv",
+    "zxvf"
+  ]
 }
