--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "scripts": {
     "build": "sh ./my-scripts/build.sh",
-    "img": "sh ./my-scripts/imghost.sh",
+    "upload": "sh ./my-scripts/imghost.sh",
     "push": "sh ./my-scripts/push.sh",
-    "update": "npm run push",
-    "update2": "npm run push && npm run build && npm run img",
+    "update": "npm run build",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
