feat: 添加图片发布脚本

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,23 @@
 {
   "cSpell.words": [
     "esmyy",
-    "leancloud",
-    "shuoshuo",
+    "exif",
     "fullwidth",
     "GSLB",
     "HTTPDNS",
     "iconpark",
     "iife",
     "instanceof",
+    "leancloud",
     "Microtask",
     "mindmap",
     "mypage",
     "npmrc",
     "Nuxt",
+    "piexif",
+    "piexifjs",
     "QUIC",
+    "shuoshuo",
     "SYNACK",
     "tailwindcss",
     "Tapable",
